examples/bad/async_await.mko
async fn boom() {
    await 1
}
